# cpp-toxcore-c

./: .travis.yml  CMakeLists.txt
include/cxxtox/: cxxtox.h  options.h  tox.h
patch/: cmake.patch
src/: cxxtox.cpp  options.cpp  tox.cpp
